2003-03-14  Lars Clausen  <lrclause@cs.uiuc.edu>

	* NEWS: 
	* doc/en/dia-manual.sgml: 
	* doc/pl/dia-manual.sgml: 
	* configure.in: 
	* dia.spec (Release): 
	Version 0.91 is here!

2003-02-10  Steffen Macke <sdteffen@web.de>

	* plug-ins/wmf/wmf.cpp: patch from Ken Tsukahara 
	<ken.tsukahara@tmt-d.co.jp>, fixes windows printing and WMF export of
	non-ANSI characters, closes #107980

2003-03-04  Lars Clausen  <lrclause@cs.uiuc.edu>

	* configure.in: 
	* NEWS: 
	* dia.spec (Release): 
	* doc/en/dia-manual.sgml: Upping to pre6.

	* configure.in: Missing comma broke HAVE_IEEEFP_H test.

	* app/lineprops_area.c (dia_arrow_chooser_new): Fixing bug
	#107511:  Make arrow selector for correct arrow type.

2003-03-03  Lars Clausen  <lrclause@cs.uiuc.edu>

	* shapes/Circuit/Makefile.am (SHAPES): Added hjumper.png to
	EXTRA_DIST.

2003-03-02  Lars Clausen  <lrclause@cs.uiuc.edu>

	* doc/en/dia-manual.sgml: 
	* configure.in: 
	* NEWS: 
	* dia.spec (Release): Upping to pre5.

	* configure.in: Add freetype-config derived libs to the
	AC_CHECK_LIB statement for freetype.

2003-02-28  Hans Breuer  <hans@breuer.org>

	[fix for bug #107203]

	* lib/diarenderer.c : add warning 'implementation'
	for fill_rect to avoid crashing with a renderer
	which does not implement this required function.

	* plug-ins/dxf/dxf-export.c : provide - still empty -
	'implementations' for fill_rect and fill_polygon 
	to suppress the above warnings. Now it works like
	in version 0.90 

2003-02-28  Steffen Macke <sdteffen@web.de>

	* samples/all_objects.dia: New sheet containing all dia shapes
	and objects; one layer per sheet
	
2003-02-28  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/prop_text.c (multistringprop_get_widget,
	multistringprop_reset_widget, multistringprop_set_from_widget): 
	Now uses GtkTextView instead of deprecated stuff, and also works:)

	* configure.in: Slightly more informative error message for isinf.

	* dia.spec (Requires): Require libxml2 rather than libxml.
